# cgc-mohali

backend/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_comprehensive_schema.py  003_add_enhanced_fields.py  09474bd35440_improved_the_moodboard_as_well_as_.py  0a31f655f46b_next_changes.py  2aeae4214275_add_moodboard_table.py  30058ead124a_improved_the_moodboard_model_and_added_.py  96b2c2abde89_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/endpoints/: analysis.py
backend/app/core/: config.py
backend/app/db/: __init__.py  database.py  models.py  schemas.py
backend/app/services/: __init__.py  ai_critique.py  ai_generator.py  ai_text.py  ai_vision.py  processing.py  storage.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/providers/: font-provider.tsx  query-provider.tsx
frontend/components/ui/: button.tsx  file-upload.tsx  loading-swap.tsx  password-input.tsx
frontend/drizzle/: 0000_lyrical_hairball.sql
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/lib/: auth.ts  env.ts
frontend/lib/db/: index.ts  schema.ts
frontend/modules/canvas/: README.md  example-usage.tsx
(+12 files in other folders)
