[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "alembic>=1.17.0",
    "diffusers>=0.35.2",
    "easyocr>=1.7.2",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers[torch]>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]
